First click after hiding unused sockets impacts node UI as if nodes had not been hidden. #112462

Closed
opened 2023-09-17 03:03:04 +02:00 by Alaska · 2 comments
Member

System Information
Operating system: macOS-13.4.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-16 23:16, hash: 75afef137292
Worked: Not sure

Short description of error
After hiding unused sockets in the node editor with Control + H, the user can still interact with some parts of the node based on the position of where these parts of the node were prior to hiding the unused sockets.

Exact steps for others to reproduce the error

  1. Create a node group with many inputs at the top, then a panel at the bottom.
  2. Select the node and click on the panel to expand or close the panel.
  3. Press Control + H to hide unused sockets, then click where the panel expander was previously located. This will expand the panel on the now compact node.

Note: This only works for the first click after hiding unused sockets.

Here is a short video because it can be hard to explain in text:

**System Information** Operating system: macOS-13.4.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-16 23:16, hash: `75afef137292` Worked: Not sure **Short description of error** After hiding unused sockets in the node editor with `Control + H`, the user can still interact with some parts of the node based on the position of where these parts of the node were prior to hiding the unused sockets. **Exact steps for others to reproduce the error** 1. Create a node group with many inputs at the top, then a panel at the bottom. 2. Select the node and click on the panel to expand or close the panel. 3. Press `Control + H` to hide unused sockets, then click where the panel expander was previously located. This will expand the panel on the now compact node. Note: This only works for the first click after hiding unused sockets. Here is a short video because it can be hard to explain in text: <video src="/attachments/50554dd8-4de9-435f-9648-a94762a0d27a" title="Panels can still be interacted with after compacting the node.mp4" controls></video>
Alaska added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-17 03:03:05 +02:00
Jesse Yurkovich changed title from Fist click after hiding unused sockets impacts node UI as if nodes had not been hidden. to First click after hiding unused sockets impacts node UI as if nodes had not been hidden. 2023-09-17 04:16:57 +02:00

This look like duplicate of #111296

But this happened with panels, so ping @LukasTonne to check if this can not be fixed in nodes code.

This look like duplicate of https://projects.blender.org/blender/blender/issues/111296 But this happened with panels, so ping @LukasTonne to check if this can not be fixed in nodes code.
Lukas Tönne self-assigned this 2023-09-17 11:38:55 +02:00
Member

Not sure if #111296 is really a duplicate. In this case it's a "sticky" button state: the button remains "highlighted" after redrawing until the mouse is moved. The fix/workaround is to add a fake mouse movement.

EDIT: It may not be the exact same issue, but adding the fake mouse move seems to fix #111296 as well.

Not sure if #111296 is really a duplicate. In this case it's a "sticky" button state: the button remains "highlighted" after redrawing until the mouse is moved. The fix/workaround is to add a fake mouse movement. EDIT: It may not be the exact same issue, but adding the fake mouse move seems to fix #111296 as well.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-21 12:05:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112462
No description provided.